<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_person_pin_24"
                android:tint="@color/colorPrimary"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="28sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:orientation="vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_email"
                    android:tint="@color/colorPrimary"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingStart="48dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    />

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_lock"
                    android:tint="@color/colorPrimary"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingStart="48dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    />

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/rePasswordIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_lock"
                    android:tint="@color/colorPrimary"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/rePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rePassword"
                    android:paddingStart="48dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fNameIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_person"
                    android:tint="@color/colorPrimary"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fName"
                    android:paddingStart="48dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/lNameIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_person"
                    android:tint="@color/colorPrimary"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lName"
                    android:paddingStart="48dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="8dp">

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/ColorSecondaryText"
                        android:checked="true"/>


                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/ColorSecondaryText"/>

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Other"
                        android:textColor="@color/ColorSecondaryText"/>



                </RadioGroup>


            </RelativeLayout>



            <RelativeLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:background="?selectableItemBackground"
                    android:textColor="@color/ColorIcons"
                    android:clickable="true"
                    />

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:padding="8dp"
                android:clickable="true"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:background="?selectableItemBackground"
                android:textStyle="normal"
                android:textColor="@color/ColorDivider"/>

            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/progressBar"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/ColorProgressbar"
                android:visibility="invisible"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </RelativeLayout>





</ScrollView>