<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">



    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_back"
            android:tint="@color/ColorIcons"
            android:padding="16dp"
            android:id="@+id/back"
            android:layout_marginStart="4dp"
            android:background="?selectableItemBackgroundBorderless"/>




        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/ColorIcons"
            android:text="@string/editNote"
            android:textSize="16sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_toStartOf="@+id/save"
            android:layout_toEndOf="@+id/back"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/save"
            app:srcCompat="@drawable/ic_save"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:tint="@color/ColorIcons"
            android:padding="16dp"
            android:background="?selectableItemBackgroundBorderless"/>



    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/parent"
        >


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:background="@null"
            android:textStyle="bold"
            android:maxLines="1"
            android:singleLine="true"
            android:maxLength="50"
            android:id="@+id/title"
            android:padding="16dp"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:lineSpacingExtra="10dp"
            android:id="@+id/message"
            android:hint="@string/message"
            android:background="@null"
            android:maxLength="5000"
            android:padding="16dp"/>








    </LinearLayout>




    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/ColorDivider" />






</RelativeLayout>

