<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/designParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/wave"
            android:backgroundTint="@color/colorPrimary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_person_pin_24"
            android:tint="@color/ColorIcons"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textColor="@color/ColorIcons"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/designParent"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emailIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:padding="2dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_email"
                android:tint="@color/colorPrimary"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingStart="48dp"
                android:paddingVertical="16dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/passwordIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:padding="2dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_lock"
                android:tint="@color/colorPrimary"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingStart="48dp"
                android:paddingVertical="16dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="12dp"
                android:textStyle="bold"
                android:background="?selectableItemBackground"
                android:textColor="@color/ColorIcons"
                android:clickable="true"
                />

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:gravity="center"
            android:padding="12dp"
            android:clickable="true"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:textStyle="normal"
            android:textColor="@color/ColorDivider"/>


        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressBar"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/ColorProgressbar"
            android:visibility="invisible"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/waveend"
        android:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>