<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.ProfileFragment"
    android:id="@+id/parent">



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/ic_person"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">



        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/emailIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:padding="2dp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_email"
            android:tint="@color/colorPrimary"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingStart="48dp"
            android:paddingVertical="16dp"
            android:background="@drawable/edit_text_background"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:focusable="false"/>

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fNameIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:padding="2dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_person"
                android:tint="@color/colorPrimary"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fName"
                android:paddingStart="48dp"
                android:paddingVertical="16dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:focusable="false"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/lNameIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:padding="2dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_person"
                android:tint="@color/colorPrimary"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lName"
                android:paddingStart="48dp"
                android:paddingVertical="16dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:focusable="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_red"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="12dp"
                android:textStyle="bold"
                android:background="?selectableItemBackground"
                android:textColor="@color/ColorIcons"
                android:clickable="true"
                />

        </RelativeLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_edit"
        android:tint="@color/ColorIcons"
        android:layout_margin="16dp"/>


</RelativeLayout>